plugins {
	id 'java'
}

repositories {
	mavenLocal {
		content {
			excludeGroup("org.lwjgl")
		}
	}
	maven {
		url = 'https://repo.runelite.net'
		content {
			includeGroupByRegex("net\\.runelite.*")
		}
	}
	mavenCentral()
}

def runeLiteVersion = 'latest.release'
def pluginMainClass = 'com.shoprestockalert.ShopRestockAlertLauncher'

dependencies {
	compileOnly group: 'net.runelite', name:'client', version: runeLiteVersion

	compileOnly 'org.projectlombok:lombok:1.18.30'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'

	testImplementation 'junit:junit:4.12'
	testImplementation 'org.mockito:mockito-core:3.1.0'
	testImplementation 'com.google.inject.extensions:guice-testlib:4.1.0'
	testImplementation group: 'net.runelite', name:'client', version: runeLiteVersion
	testImplementation group: 'net.runelite', name:'jshell', version: runeLiteVersion
}

configurations.all {
	resolutionStrategy.eachDependency { details ->
		if (details.requested.group == 'org.lwjgl') {
			details.useVersion details.requested.version
		}
	}
}

group = 'com.shoprestockalert'
version = '1.0.0'

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
	options.release.set(11)
}

test {
	jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
}

tasks.register('run', JavaExec) {
	classpath = sourceSets.test.runtimeClasspath
	mainClass = pluginMainClass

	jvmArgs "-ea"
	args "--developer-mode", "--debug"
}

tasks.register('installPlugin', Jar) {
	from sourceSets.main.output
	from('.') {
		include 'runelite_plugin.json'
	}

	archiveFileName.set("${rootProject.name}-${project.version}.jar")
	destinationDirectory.set(file("${System.getProperty('user.home')}/.runelite/externalPlugins"))

	group = BasePlugin.BUILD_GROUP
	description = 'Build and install the plugin to the RuneLite external plugins folder'
}

tasks.register('shadowJar', Jar) {
	dependsOn configurations.testRuntimeClasspath
	manifest {
		attributes('Main-Class': pluginMainClass, 'Multi-Release': true)
	}

	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
	from sourceSets.main.output
	from sourceSets.test.output
	from {
		configurations.testRuntimeClasspath.collect { file ->
			file.isDirectory() ? file : zipTree(file)
		}
	}

	exclude 'META-INF/INDEX.LIST'
	exclude 'META-INF/*.SF'
	exclude 'META-INF/*.DSA'
	exclude 'META-INF/*.RSA'
	exclude '**/module-info.class'

	group = BasePlugin.BUILD_GROUP
	archiveClassifier.set('shadow')
	archiveFileName.set("${rootProject.name}-${project.version}-all.jar")
}

if (file('local.gradle').exists()) {
	apply from: 'local.gradle'
}
